--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   height: 17.95vh;
   left: 43.2vw;
   top: 0.7vh;
-  background: url("././images/phoenix.png");
+  background: url("https://scalebranding.com/wp-content/uploads/2020/05/golden-phoenix-eagle-01.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -1267,7 +1267,7 @@
   height: 32.4vh;
   left: 38.9vw;
   top: 2.1vh;
-  background-image: url("././images/phoenix.png");
+  background-image: url("https://scalebranding.com/wp-content/uploads/2020/05/golden-phoenix-eagle-01.png");
   background-size: 70%;
   background-repeat: no-repeat;
   background-position: center;
@@ -1323,7 +1323,7 @@
   height: 12.7vh;
   left: 46.5vw;
   top: 49.6vh;
-  background: url("././images/pnga.png");
+  background: url("https://www.pngitem.com/pimgs/m/609-6092654_tripadvisor-certificate-of-excellence-2019-logo-hd-png.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -1334,7 +1334,7 @@
   height: 3.1vh;
   left: 64.6vw;
   top: 59.2vh;
-  background: url("././images/clipart.png");
+  background: url("https://www.kindpng.com/picc/m/133-1336517_clipart-credit-cards-logos-we-accept-visa-mastercard.png");
   background-repeat: no-repeat;
   background-position: left;
   background-size: cover;
